logs/param/build.make.029.log
[ 33%] Built target pubvel_spiral
[ 66%] Built target pubvel_with_max
Scanning dependencies of target set_bg_color
[ 83%] Building CXX object CMakeFiles/set_bg_color.dir/src/set_bg_color.cpp.o
/home/ros-industrial/HW8/src/param/src/set_bg_color.cpp: In function ‘int main(int, char**)’:
/home/ros-industrial/HW8/src/param/src/set_bg_color.cpp:22:32: error: ‘green’ was not declared in this scope
   ros::param::get(PARAM_NAME2, green);
                                ^
/home/ros-industrial/HW8/src/param/src/set_bg_color.cpp:23:32: error: ‘blue’ was not declared in this scope
   ros::param::get(PARAM_NAME3, blue);
                                ^
CMakeFiles/set_bg_color.dir/build.make:62: recipe for target 'CMakeFiles/set_bg_color.dir/src/set_bg_color.cpp.o' failed
CMakeFiles/Makefile2:141: recipe for target 'CMakeFiles/set_bg_color.dir/all' failed
Makefile:138: recipe for target 'all' failed
make[2]: *** [CMakeFiles/set_bg_color.dir/src/set_bg_color.cpp.o] Error 1
make[1]: *** [CMakeFiles/set_bg_color.dir/all] Error 2
make: *** [all] Error 2
